--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,14 @@
 spring.application.name=bookstore
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:h2:mem:testdb
+# spring.datasource.url=jdbc:h2:mem:testdb
 spring.data.rest.base-path=/api
+
+#LOCAL
+spring.datasource.url=jdbc:postgresql://localhost:5432/HH-bookstore
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+#JPA/hibernate will not change the database
+spring.jpa.hibernate.ddl-auto=none
