Change application.properties for Render.com

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,17 @@ spring.jpa.show-sql=true
 spring.data.rest.base-path=/api
 
 #LOCAL
-spring.datasource.url=jdbc:postgresql://localhost:5432/HH-bookstore
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+# spring.datasource.url=jdbc:postgresql://localhost:5432/HH-bookstore
+# spring.datasource.username=postgres
+# spring.datasource.password=postgres
+
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 #JPA/hibernate will not change the database
 spring.jpa.hibernate.ddl-auto=none
+
+#RENDER
+spring.datasource.url= jdbc:postgresql://dpg-cs3amot6l47c73ecvmcg-a.frankfurt-postgres.render.com/hh_bookstore_postresql
+spring.datasource.username=hh_bookstore_postresql_user
+spring.datasource.password=PH3TTjVEd95m3r7ytlNY8XNDlk4zKyAz
