Fix render username and password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,5 @@ spring.jpa.hibernate.ddl-auto=none
 
 #RENDER
 spring.datasource.url= jdbc:postgresql://dpg-cs3amot6l47c73ecvmcg-a.frankfurt-postgres.render.com/hh_bookstore_postresql
-spring.datasource.username=hh_bookstore_postresql_user
-spring.datasource.password=PH3TTjVEd95m3r7ytlNY8XNDlk4zKyAz
+spring.datasource.username=${RENDER_USERNAME}
+spring.datasource.password=${RENDER_PASSWORD}
