--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 
 #RENDER
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:data.sql
 spring.datasource.url= jdbc:postgresql://dpg-cs3amot6l47c73ecvmcg-a.frankfurt-postgres.render.com/hh_bookstore_postresql
 spring.datasource.username=${RENDER_USERNAME}
 spring.datasource.password=${RENDER_PASSWORD}
